--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "Projeto pessoal de aprendizado nodejs",
   "main": "index.js",
   "scripts": {
-    "start": "node index"
+    "start": "node index",
+    "dev": "nodemon index"
   },
   "author": "João Victor Asevêdo",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "nodemon": "^2.0.18"
   }
 }
