--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "mysql": "github:mysqljs/mysql",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.18"
   }
 }
