--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Projeto pessoal de aprendizado nodejs",
   "main": "index.js",
+  
   "scripts": {
     "start": "node index",
     "dev": "nodemon index"
@@ -14,6 +15,8 @@
     "express": "^4.18.1",
     "mysql": "github:mysqljs/mysql",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.18"
+    "nodemon": "^2.0.18",
+    "sequelize": "^6.21.3",
+    "sqlite3": "^5.0.8"
   }
 }
