--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "Projeto pessoal de aprendizado nodejs",
   "main": "index.js",
-  
   "scripts": {
     "start": "node index",
     "dev": "nodemon index"
@@ -11,6 +10,7 @@
   "author": "João Victor Asevêdo",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mysql": "github:mysqljs/mysql",
