--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "nodemon": "^2.0.18",
     "sequelize": "^6.21.3",
     "sqlite3": "^5.0.8"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.1"
   }
 }
