--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.18",
     "sequelize": "^6.21.3",
-    "sqlite3": "^5.0.8"
+    "sqlite3": "^5.0.8",
+    "dotenv": "^16.0.1"
   },
   "devDependencies": {
-    "dotenv": "^16.0.1"
+    
   }
 }
