--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Projeto pessoal de aprendizado nodejs",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
+    "start": "node index.js",
     "dev": "nodemon index"
   },
   "author": "João Victor Asevêdo",
